--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       php artisan key:generate
       php artisan config:clear
       php artisan route:clear
-    startCommand: vendor/bin/heroku-php-apache2 public/
+    startCommand: php artisan serve --host=0.0.0.0 --port=$PORT
     envVars:
       - key: APP_ENV
         value: production
