--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       php artisan key:generate
       php artisan config:clear
       php artisan route:clear
-    startCommand: php artisan serve --host=0.0.0.0 --port=$PORT
+    startCommand: apache2-foreground
     envVars:
       - key: APP_ENV
         value: production
